2007-12-04  Douglas Gregor  <doug.gregor@gmail.com>

PR c++/33509
       * pt.c (tsubst_exception_specification): Handle substitutions into
       member templates, where tsubst_pack_expansion returns a
       TYPE_PACK_EXPANSION.

2007-12-04  Douglas Gregor  <doug.gregor@gmail.com>

       PR c++/33509
       * g++.dg/cpp0x/variadic-throw.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@130605 138bc75d-0d04-0410-961f-82ee72b054a4